Implement Monitoring tools Prometheus and Grafana with dashboards

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,33 @@ services:
     command: node unstable.js
     ports:
       - "4000:4000"
+
   redis:
     image: redis:alpine
     ports:
       - "6379:6379"
+  
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
+    depends_on:
+      - unstable-service
+    restart: unless-stopped
+
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    ports:
+      - "3002:3000" 
+    volumes:
+      - grafana-data:/var/lib/grafana
+    depends_on:
+      - prometheus
+    restart: unless-stopped
+
+volumes:
+  grafana-data:
