--- a/services/package.json
+++ b/services/package.json
@@ -9,8 +9,10 @@
     "unstable": "node unstable.js"
   },
   "dependencies": {
-    "express": "^4.18.4",
+    "express": "^4.21.2",
     "node-fetch": "^3.3.2",
-    "redis": "^5.6.0"
+    "prom-client": "^15.1.3",
+    "redis": "^5.6.0",
+    "winston": "^3.17.0"
   }
 }
